--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>'Weather' To Go..</title>
+        <div>
+            <title class="title">'Weather' To Go..</title>
             <link
             rel="stylesheet"
             href="https://api.openweathermap.org/data/2.5/onecall?lat={lat}&lon={lon}&exclude={part}&appid={API key}"
             />
             <link rel="stylesheet" href="./index.css" />
             <link rel="sun icon" type="image/png" href="./sun.jfif" />
+        </div>
 </head>
 
 <body>
