--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </section>
 
-    <section class="col-4 cities" id="cities">
+    <section class="cities" id="cities">
         <div>
             <button type="button" class="Austin">Austin, TX</button>
         </div>
@@ -56,7 +56,8 @@
         <div>
             <button type="button" class="Atlanta">Atlanta, GA</button>
         </div>
-        <div class="col-8 forecast" id="5days">
+    </section>
+        <div class="forecast" id="5days">
             <h2>5 Day Forecast:</h2>
             <ul>
             <li class="day1"></li>
@@ -66,7 +67,6 @@
             <li class="day5"></li>
             </ul>
         </div>
-    </section>
 </body>
 
     <script src="index.js"></script>
