--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <div>
-            <title>'Weather' To Go..</title>
-            <link
-            rel="stylesheet"
-            href="https://api.openweathermap.org/data/2.5/onecall?lat={lat}&lon={lon}&exclude={part}&appid={API key}"
-            />
-            <link rel="stylesheet" href="./index.css" />
-            <link rel="sun icon" type="image/png" href="./sun.jfif" />
-        </div>
+    <div>
+        <title>'Weather' To Go..</title>
+        <link rel="stylesheet"
+            href="https://api.openweathermap.org/data/2.5/onecall?lat={lat}&lon={lon}&exclude={part}&appid={API key}" />
+        <link rel="stylesheet" href="./index.css" />
+        <link rel="sun icon" type="image/png" href="./sun.jfif" />
+    </div>
 </head>
 
 <body>
@@ -20,11 +19,11 @@
         <div class="dashboard" id="title">
             <h1>Weather Dashboard</h1>
         </div>
+    </section>
+    <section>
         <div class="search" id="city">
             <h2>Search for a City:</h2>
-            <textarea
-                placeholder="Enter City"
-            ></textarea>
+            <textarea placeholder="Enter City"></textarea>
         </div>
         <div>
             <button type="button" class="btn" id="search">Search</button>
@@ -57,17 +56,60 @@
             <button type="button" class="Atlanta">Atlanta, GA</button>
         </div>
     </section>
+    <section>
+        <div class="selected-city" id="selected-city">
+            (selected city)
+        </div>
+    </section>
+    <section>
         <div class="forecast" id="5days">
             <h2>5 Day Forecast:</h2>
             <ul>
-            <li class="day1"></li>
-            <li class="day2"></li>
-            <li class="day3"></li>
-            <li class="day4"></li>
-            <li class="day5"></li>
+                <li class="day1" id="day1">
+                    <dl>
+                        <dt>Temp:</dt>
+                        <dt>Humidity:</dt>
+                        <dt>Wind:</dt>
+                        <dt>UV Index:</dt>
+                    </dl>
+                </li>
+                <li class="day2" id="day2">
+                    <dl>
+                        <dt>Temp:</dt>
+                        <dt>Humidity:</dt>
+                        <dt>Wind:</dt>
+                        <dt>UV Index:</dt>
+                    </dl>
+                </li>
+                <li class="day3" id="day3">
+                    <dl>
+                        <dt>Temp:</dt>
+                        <dt>Humidity:</dt>
+                        <dt>Wind:</dt>
+                        <dt>UV Index:</dt>
+                    </dl>
+                </li>
+                <li class="day4" id="day4">
+                    <dl>
+                        <dt>Temp:</dt>
+                        <dt>Humidity:</dt>
+                        <dt>Wind:</dt>
+                        <dt>UV Index:</dt>
+                    </dl>
+                </li>
+                <li class="day5" id="day5">
+                    <dl>
+                        <dt>Temp:</dt>
+                        <dt>Humidity:</dt>
+                        <dt>Wind:</dt>
+                        <dt>UV Index:</dt>
+                    </dl>
+                </li>
             </ul>
         </div>
+    </section>
 </body>
 
-    <script src="index.js"></script>
+<script src="index.js"></script>
+
 </html>
